carousel z-index fixed

--- a/source/assets/stylesheets/components/_project.scss
+++ b/source/assets/stylesheets/components/_project.scss
@@ -3,7 +3,9 @@
   border-radius: 15px;
   height: 500px;
 }
-
+.carousel-inner{
+  z-index: -1;
+}
 .card-icon{
   width: 50px;
   height: 50px;
